[gd_scene load_steps=4 format=3 uid="uid://dfpwsb72q07qu"]

[ext_resource type="Script" path="res://core/gui/default_end_screen.gd" id="1_i3m1c"]

[sub_resource type="Animation" id="Animation_n7tdw"]
resource_name = "fade_in"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer/VBoxContainer/Button2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"grab_focus"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nmm7k"]
_data = {
"fade_in": SubResource("Animation_n7tdw")
}

[node name="default_end_screen" type="CanvasLayer"]
layer = 2
script = ExtResource("1_i3m1c")

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(480, 270)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.262745, 0.262745, 0.309804, 0.411765)

[node name="CenterContainer" type="CenterContainer" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(480, 270)
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "CONGRATULATIONS!"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "You have completed the level"
horizontal_alignment = 1

[node name="LevelNameLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "LEVELNAME"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "in TIME seconds!"
horizontal_alignment = 1

[node name="TimeLabel2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Retry level"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Return to lobby"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
libraries = {
"": SubResource("AnimationLibrary_nmm7k")
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
